improved data structure

--- a/src/Cliargs/Cliargs.csproj
+++ b/src/Cliargs/Cliargs.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Validation\Rules\" />
+    <None Remove="Extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Validation\Rules\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
 </Project>
