--- a/src/Cliargs.Demo/Cliargs.Demo.csproj
+++ b/src/Cliargs.Demo/Cliargs.Demo.csproj
@@ -11,4 +11,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
 </Project>
