--- a/src/Cliargs/Cliargs.csproj
+++ b/src/Cliargs/Cliargs.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <None Remove="Validation\Rules\" />
     <None Remove="Extensions\" />
+    <None Remove="Conversion\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Validation\Rules\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Conversion\" />
   </ItemGroup>
 </Project>
