deleted:    src/Cliargs.Demo/CliArgsConfiguration.cs 	new file:   src/Cliargs.Demo/CliArgsSetup.cs 	modified:   src/Cliargs.Demo/Program.cs 	modified:   src/Cliargs.Tests/Rules/RangeValidationRuleTests.cs 	deleted:    src/Cliargs.Tests/ValidationContextTests.cs 	deleted:    src/Cliargs/CLIArguments.cs 	new file:   src/Cliargs/CliArg.cs 	new file:   src/Cliargs/CliArgsBuilder.cs 	new file:   src/Cliargs/CliArgsContainer.cs 	new file:   src/Cliargs/CliArgsFormat.cs 	renamed:    src/Cliargs/ArgumentInfo.cs -> src/Cliargs/CliArgsInfo.cs 	new file:   src/Cliargs/CliArgsRepository.cs 	new file:   src/Cliargs/CliArgsValidationContext.cs 	new file:   src/Cliargs/CliArgsValidationResult.cs 	new file:   src/Cliargs/CliArgsValidationRule.cs 	deleted:    src/Cliargs/CliArgumentContext.cs 	modified:   src/Cliargs/Cliargs.csproj 	modified:   src/Cliargs/Conversion/ValueTypeConverter.cs 	deleted:    src/Cliargs/Extensions/ArgValidationContextExtensions.cs 	deleted:    src/Cliargs/Extensions/ArgumentInfoExtensions.cs 	deleted:    src/Cliargs/Extensions/CLIArgumentsExtensions.cs 	deleted:    src/Cliargs/Extensions/CliArgumentContextExtensions.cs 	deleted:    src/Cliargs/IArgsConfiguration.cs 	new file:   src/Cliargs/ICliArgsBuilder.cs 	new file:   src/Cliargs/ICliArgsContainer.cs 	new file:   src/Cliargs/ICliArgsRepository.cs 	new file:   src/Cliargs/ICliArgsSetup.cs 	new file:   src/Cliargs/ICliArgsValidationContext.cs 	new file:   src/Cliargs/ICliArgsValidationResult.cs 	new file:   src/Cliargs/ICliArgsValidationRule.cs 	deleted:    src/Cliargs/IValidationRule.cs 	renamed:    src/Cliargs/Validation/Rules/RangeValidationRule.cs -> src/Cliargs/Rules/RangeValidationRule.cs 	deleted:    src/Cliargs/Validation/ArgValidationContext.cs 	deleted:    src/Cliargs/Validation/ArgValidationResult.cs 	deleted:    src/Cliargs/Validation/Rules/ValidationRule.cs

--- a/src/Cliargs/Cliargs.csproj
+++ b/src/Cliargs/Cliargs.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Validation\Rules\" />
     <None Remove="Extensions\" />
     <None Remove="Conversion\" />
+    <None Remove="Rules\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Validation\Rules\" />
     <Folder Include="Extensions\" />
     <Folder Include="Conversion\" />
+    <Folder Include="Rules\" />
   </ItemGroup>
 </Project>
