added tests for rules

--- a/src/Cliargs/Cliargs.csproj
+++ b/src/Cliargs/Cliargs.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Description>Commande Line Arguments management like cake.</Description>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <None Remove="Extensions\" />
     <None Remove="Conversion\" />
