--- a/src/Cliargs.Tests/Cliargs.Tests.csproj
+++ b/src/Cliargs.Tests/Cliargs.Tests.csproj
@@ -14,10 +14,14 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
+    <PackageReference Include="ReportGenerator" Version="5.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Cliargs\Cliargs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ReportGenerator" />
+  </ItemGroup>
 </Project>
