added scripts for test report

--- a/src/Cliargs.Tests/Cliargs.Tests.csproj
+++ b/src/Cliargs.Tests/Cliargs.Tests.csproj
@@ -23,5 +23,9 @@
 
   <ItemGroup>
     <None Remove="ReportGenerator" />
+    <None Remove="_scripts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="_scripts\" />
   </ItemGroup>
 </Project>
