--- a/src/Cliargs/Cliargs.csproj
+++ b/src/Cliargs/Cliargs.csproj
@@ -9,7 +9,28 @@
     <Nullable>enable</Nullable>
 
     <Description>Commande Line Arguments parser and C# API</Description>
+    <ReleaseVersion>0.1.0-preview</ReleaseVersion>
+    <Version>0.1.0-preview</Version>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
+    <FileVersion>0.1.0</FileVersion>
+    <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
+    <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <PackageIcon>Cliargs.png</PackageIcon>
+    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Cliargs.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\license.txt">
+      <Pack>True</Pack>
+      <PackagePath>license.txt</PackagePath>
+    </None>
+  </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
