--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+defaults:
+  run:
+    working-directory: src
+
 jobs:
   build:
 
@@ -18,8 +22,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore src/Cliargs.sln 
+      run: dotnet restore
     - name: Build
-      run: dotnet build src/Cliargs.sln --no-restore
+      run: dotnet build --no-restore
     - name: Test
-      run: dotnet test src/Cliargs.sln --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
