created first preview package

--- a/src/Cliargs.Tests/Cliargs.Tests.csproj
+++ b/src/Cliargs.Tests/Cliargs.Tests.csproj
@@ -19,10 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cliargs\Cliargs.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="ReportGenerator" />
     <None Remove="_scripts\" />
     <None Remove="TestResults\a31cd180-b0a0-4632-877d-845279e966f4\coverage.cobertura.xml" />
@@ -88,5 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="_scripts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Cliargs\Cliargs.NET.csproj" />
   </ItemGroup>
 </Project>
