--- a/src/Cliargs/Cliargs.NET.csproj
+++ b/src/Cliargs/Cliargs.NET.csproj
@@ -9,14 +9,15 @@
     <Nullable>enable</Nullable>
 
     <Description>Commande Line Arguments parser and C# API</Description>
-    <ReleaseVersion>0.1.0-preview</ReleaseVersion>
-    <Version>0.1.0-preview</Version>
+    <ReleaseVersion>0.1.0</ReleaseVersion>
+    <Version>0.1.0</Version>
     <AssemblyVersion>0.1.0</AssemblyVersion>
     <FileVersion>0.1.0</FileVersion>
     <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageIcon>Cliargs.png</PackageIcon>
     <SynchReleaseVersion>false</SynchReleaseVersion>
+    <RootNamespace>Cliargs</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -27,12 +28,22 @@
     <LangVersion>10.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\..\license.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Cliargs.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Extensions\" />
     <None Remove="Conversion\" />
     <None Remove="Rules\" />
     <None Remove="Exceptions\" />
-    <None Remove="..\..\Cliargs.png" />
-    <None Remove="..\..\license.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
