--- a/src/Cliargs/Cliargs.NET.csproj
+++ b/src/Cliargs/Cliargs.NET.csproj
@@ -9,8 +9,8 @@
     <Nullable>enable</Nullable>
 
     <Description>Commande Line Arguments parser and C# API</Description>
-    <ReleaseVersion>0.1.0</ReleaseVersion>
-    <Version>0.1.0</Version>
+    <ReleaseVersion>0.1.1-alpha</ReleaseVersion>
+    <Version>0.1.1-alpha</Version>
     <AssemblyVersion>0.1.0</AssemblyVersion>
     <FileVersion>0.1.0</FileVersion>
     <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
