--- a/src/Cliargs/Cliargs.NET.csproj
+++ b/src/Cliargs/Cliargs.NET.csproj
@@ -9,10 +9,10 @@
     <Nullable>enable</Nullable>
 
     <Description>Commande Line Arguments parser and C# API</Description>
-    <ReleaseVersion>0.1.2-alpha</ReleaseVersion>
-    <Version>0.1.2-alpha</Version>
-    <AssemblyVersion>0.1.2</AssemblyVersion>
-    <FileVersion>0.1.2</FileVersion>
+    <ReleaseVersion>1.0.1</ReleaseVersion>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
     <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <PackageIcon>Cliargs.png</PackageIcon>
