--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,5 +50,5 @@ jobs:
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v2.2.3
       with:
-        name: CoverageReport # Artifact name        
-        path: coveragereport # Directory containing files to upload
+        name: coverage.svg # Artifact name        
+        path: coveragereport/badge_combined.svg # Directory containing files to upload
