--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,7 +52,8 @@ jobs:
       run: |
         git clone https://gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         cd ca605b75749777148ab9dcb5ccae1d40
-        cp ../coveragereport/badge_combined.svg combined.svg
+        pwd
+        cp ../../coveragereport/badge_combined.svg combined.svg
         git remote set-url origin https://YounesCheikh:${GITHUB_TOKEN}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         git add combined.svg
         git commit -m "updated badge"
