--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,9 +52,8 @@ jobs:
       run: |
         git clone https://gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         cd ca605b75749777148ab9dcb5ccae1d40
-        pwd
         cp ../../coveragereport/badge_combined.svg combined.svg
-        git remote set-url origin https://${GITHUB_TOKEN}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
+        git remote set-url origin https://YounesCheikh:${{ secrets.gist }}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         git add combined.svg
         git commit -m "updated badge"
         git push
