--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,6 +51,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.gist }}
       run: |
         git clone https://gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
+        git config --global user.name "YounesCheikh"
         cd ca605b75749777148ab9dcb5ccae1d40
         cp ../../coveragereport/badge_combined.svg combined.svg
         git remote set-url origin https://YounesCheikh:${{ secrets.gist }}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
