--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,10 +52,9 @@ jobs:
       run: |
         git clone https://gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         git config --global user.name "YounesCheikh"
-        git config --global user.email younes.cheikh@gmail.com
         cd ca605b75749777148ab9dcb5ccae1d40
         cp ../../coveragereport/badge_combined.svg combined.svg
         git remote set-url origin https://YounesCheikh:${{ secrets.gist }}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         git add combined.svg
         git commit -m "updated badge"
-        git push
+        git push origin main
