--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,7 +55,7 @@ jobs:
         git config credential.helper store
         git config user.name "younescheikh"
         git config user.email "dev@somecode.net"
-        git remote set-url origin https://${{ secrets.cliargscoverage }}:x-oauth-basic@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
+        git remote set-url origin https://${{ secrets.cliargscoverage }}@gist.github.com/ca605b75749777148ab9dcb5ccae1d40.git
         cp ../../coveragereport/badge_combined.svg combined.svg
         git add combined.svg
         git commit -m "updated badge"
