--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,10 @@ jobs:
       run: dotnet test --collect:"XPlat Code Coverage" --no-build --verbosity normal --results-directory:"./TestResults/"
     - name: Move Coverage
       run: cp ./TestResults/*/coverage.cobertura.xml ./TestResults/coverage.cobertura.xml
+    - name: Install fonts 
+      run: |
+        sudo apt install ttf-mscorefonts-installer fontconfig
+        sudo fc-cache -f
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.0.4
       with:
@@ -54,7 +58,7 @@ jobs:
         cd Cliargs.NET.wiki
         git config credential.helper store
         git config user.name "younescheikh"
-        git config user.email "dev@somecode.net"
+        git config user.email "<>"
         git remote set-url origin https://${{ secrets.COVERAGE }}@github.com/YounesCheikh/Cliargs.NET.wiki.git
         cp ../../coveragereport/badge_linecoverage.png ./linecoverage.png
         git add badge_linecoverage.png
