--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,8 @@ name: publish to nuget
 on:
   push:
     branches:
-      - release # Default release branch
+      - release/** # Default release branch
+      - preview/**
 jobs:
   publish:
     name: build, pack & publish
