--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
           # TAG_COMMIT: true
 
           # Format of the git tag, [*] gets replaced with actual version
-          TAG_FORMAT: *
+          # TAG_FORMAT: *
 
           # API key to authenticate with NuGet server
           NUGET_KEY: ${{secrets.CLIARGS_NUGET}}
