--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,37 +16,11 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
-      # Publish
-      - name: publish on version change
-        id: publish_nuget
-        uses: rohith/publish-nuget@v2
-        with:
-          # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: src/Cliargs/Cliargs.NET.csproj
-          
-          # NuGet package id, used for version detection & defaults to project name
-          PACKAGE_NAME: Cliargs.NET
-          
-          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          # VERSION_FILE_PATH: Directory.Build.props
+      - name: Build binaries
+        run: dotnet build -c Release src/Cliargs/Cliargs.NET.csproj
 
-          # Regex pattern to extract version info in a capturing group
-          VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-          
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          # VERSION_STATIC: 1.0.0
+      - name: Creating a package
+        run: dotnet pack --no-build -c Release src/Cliargs/Cliargs.NET.csproj -o .
 
-          # Flag to toggle git tagging, enabled by default
-          # TAG_COMMIT: true
-
-          # Format of the git tag, [*] gets replaced with actual version
-          # TAG_FORMAT: *
-
-          # API key to authenticate with NuGet server
-          NUGET_KEY: ${{secrets.CLIARGS_NUGET}}
-
-          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          # NUGET_SOURCE: https://api.nuget.org
-
-          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-          INCLUDE_SYMBOLS: false
+      - name: Publish to Nuget 
+        run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.CLIARGS_NUGET}} --skip-duplicate -n 
