--- a/src/Cliargs/Cliargs.NET.csproj
+++ b/src/Cliargs/Cliargs.NET.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net48;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net45;net451;net452;net46;net461;net462;net47;net471;net472;net48;net5.0;net6.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <CheckEolTargetFramework>true</CheckEolTargetFramework>
     <Authors>Younes Cheikh</Authors>
 
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <Description>Commande Line Arguments parser and C# API</Description>
     <!-- <ReleaseVersion>1.2.0-alpha</ReleaseVersion> -->
-    <Version>1.2.1-beta</Version>
+    <Version>1.2.2-beta</Version>
     <!-- <AssemblyVersion>1.2.0-alpha</AssemblyVersion> -->
     <!-- <FileVersion>1.2.0-alpha</FileVersion> -->
     <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
