--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - release/** # Default release branch
+      - release # Default release branch
       - preview/**
 jobs:
   publish:
