--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ defaults:
       toc: true         # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /docs/:title/
+      permalink: /posts/:title/
   - scope:
       path: _drafts
     values:
