--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ assets:
     # only works if `assets.self_host.enabled` is 'true'
     env:          # [development|production]
 
-paginate: 10
+# paginate: 100
 
 # ------------ The following options are not recommended to be modified ------------------
 
