--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,7 +3,7 @@
 -
   type: Github
   icon: 'fab fa-github'   # icons powered by <https://fontawesome.com/>
-  url:  'https://github.com/YounesCheikh/Cliargs.NET'                  # Fill with your Linkedin homepage
+  url:  'https://github.com/YounesCheikh/Cliargs.NET'                  
 
 # Uncomment and complete the url below to enable more contact options
 # -
