--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ defaults:
       toc: true         # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: posts/:title/
+      permalink: :slugified_categories/:title/
   - scope:
       path: _drafts
     values:
@@ -199,7 +199,15 @@ jekyll-archives:
     category: /categories/:name/
 
 sorted-categories: 
-  - Get Started
-  - Basic usage
-  - Advanced usage
-  - Validation Rules
+  - 
+    name: Get Started
+    icon: 
+  - 
+    name: Basic usage
+    icon: 
+  - 
+    name: Advanced usage
+    icon: 
+  - 
+    name: Validation Rules
+    icon: 
