--- a/src/Cliargs/Cliargs.NET.csproj
+++ b/src/Cliargs/Cliargs.NET.csproj
@@ -8,9 +8,9 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <Description>Commande Line Arguments parser and C# API</Description>
+    <Description>Commande Line Interface Arguments parser and C# API</Description>
     <!-- <ReleaseVersion>1.2.0-alpha</ReleaseVersion> -->
-    <Version>1.2.3</Version>
+    <Version>1.3.0</Version>
     <!-- <AssemblyVersion>1.2.0-alpha</AssemblyVersion> -->
     <!-- <FileVersion>1.2.0-alpha</FileVersion> -->
     <RepositoryUrl>https://github.com/YounesCheikh/Cliargs.NET</RepositoryUrl> 
